[gd_scene load_steps=22 format=2]

[ext_resource path="res://UI_Elements/minusButtonPressed.png" type="Texture" id=1]
[ext_resource path="res://UI_Elements/plusButtonActive.png" type="Texture" id=2]
[ext_resource path="res://UI_Elements/plusButton.png" type="Texture" id=3]
[ext_resource path="res://UI_Elements/plusButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://UI_Elements/minusButtonInactive.png" type="Texture" id=5]
[ext_resource path="res://UI_Elements/minusButtonActive.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/SkillPointsPage/SkillPackSkill.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=25]
size = 26
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFontData" id=24]
font_path = "res://Fonts/Gruppo-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 26
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = SubResource( 24 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxTexture" id=32]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 50, 50 )

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 50, 50 )

[node name="SkillObject" type="Control"]
unique_name_in_owner = true
anchor_right = 0.129072
anchor_bottom = 0.0346667
margin_right = -1.52588e-05
script = ExtResource( 10 )

[node name="SkillName" type="Label" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 25 )
text = "TEST LABEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillLevel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 1.10161
anchor_top = 0.133547
anchor_right = 1.24285
anchor_bottom = 1.06838
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 12 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="."]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.968966
anchor_right = 1.06897
anchor_bottom = 0.974359
margin_right = -3.05176e-05

[node name="Minus" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 1.33162
anchor_top = 0.133547
anchor_right = 1.45268
anchor_bottom = 0.934828
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Plus" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 1.51321
anchor_top = 0.133547
anchor_right = 1.63426
anchor_bottom = 0.934828
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 31 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered" from="." to="." method="_on_SkillObject_mouse_entered"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
